--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/stack": "^7.4.5",
     "react": "19.1.0",
     "react-native": "0.80.0",
+    "react-native-confirmation-code-field": "^8.0.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.27.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
