--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native-confirmation-code-field": "^8.0.1",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "^2.27.2",
+    "react-native-image-picker": "^8.2.1",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^5.5.2",
     "react-native-screens": "^4.13.1"
